--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-  <title>FlashCart | WhatsApp shopping template</title>
+  <title>Namma Organic Store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  <meta name="description" content="FlashCart is shopping cart that lets your customers order via WhatsApp">
+  <meta name="description" content="Organic Vegetables and Grocery">
   
-  <meta property="og:title" content="FlashCart: Shop Via WhatsApp" />
-  <meta property="og:url" content="https://flashcart.wiosdesigns.xyz" />
-  <meta property="og:description" content="FlashCart is shopping cart that lets your customers order via WhatsApp">
+  <meta property="og:title" content="Namma Organic Store"/>
+  <meta property="og:url" content="https://nammaorganic.netlify.app/"/>
+  <meta property="og:description" content="Organic Vegetables and Grocery">
   <meta property="og:image" content="/codefiles/assets/ogicon.png">
   <meta property="og:type" content="website" />
   
@@ -30,7 +30,7 @@
 <div id="app">
   <header>
     <a href="#home">
-      <img src="/codefiles/assets/logotext.png">
+      Namma Organic Store
     </a>
     <a href="#home" v-if="page=='shop'" style="color: var(--theme);">
       HOME
@@ -41,12 +41,12 @@
   </header>
   <section id="home" class="hnav">
     <h3>
-      Setup an ecommerce website and receive orders
-      on WhatsApp
+     Organic Vegetables and Grocery
       <br> 
     </h3>
-    <a href="#shop" class="btn">See Demo</a>
-    
+    <a href="#shop" class="btn">Order now</a>
+    <img src="/inventory/images/map.svg">
+    <a href="https://goo.gl/maps/3jtKRqxHZ7fjfrQ990" class="btn">Find Us</a>
   </section>
   
   <section id="shop" class="hnav" hnav:start>
