--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
       <br> 
     </h3>
     <a href="#shop" class="btn">Order now</a>
+    <br><br>
     <img src="/inventory/images/map.svg">
-    <a href="https://goo.gl/maps/3jtKRqxHZ7fjfrQ990" class="btn">Find Us</a>
+    <br>
+    <a href="https://goo.gl/maps/3jtKRqxHZ7fjfrQ990" class="btn">36, 7th Cross, 6th Main, Malleshwaram</a>
   </section>
   
   <section id="shop" class="hnav" hnav:start>
