--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
       <br> 
     </h3>
     <a href="#shop" class="btn">Order now</a>
-    <br><br>
+    <br><br><br>
     <img src="/inventory/images/map.svg">
-    <br>
-    <a href="https://goo.gl/maps/3jtKRqxHZ7fjfrQ990" class="btn">36, 7th Cross, 6th Main, Malleshwaram</a>
+    <br><br>
+    <p>36, 7th Cross, 6th Main, Malleshwaram</p>
+    <a href="https://goo.gl/maps/3jtKRqxHZ7fjfrQ990" class="btn">Open in Maps</a>
   </section>
   
   <section id="shop" class="hnav" hnav:start>
