--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <img src="/inventory/images/map.svg">
     <br>
     <p>36, 7th Cross, 6th Main, Malleshwaram</p>
-    <a href="https://goo.gl/maps/3jtKRqxHZ7fjfrQ990" class="btn">Open in Maps</a>
+    <a href="https://www.google.com/maps/place/Namma+Organic+Store/@12.9980882,77.5672775,18z/data=!4m8!1m2!2m1!1s36,+7th+Cross,+6th+Main,+Malleshwaram!3m4!1s0x3bae16310cd4d1ad:0xe5ec1852cd223d82!8m2!3d12.9982613!4d77.5670685" class="btn">Open in Maps</a>
   </section>
   
   <section id="shop" class="hnav" hnav:start>
