--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="app">
   <header>
     <a href="#home">
-      Namma Organic Store
+      <strong> Namma Organic Store </strong>
     </a>
     <a href="#home" v-if="page=='shop'" style="color: var(--theme);">
       HOME
