--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
     <div style="grid-area: 3 / 2 / 4 / 3;" class="qctrl" v-else>
       <span class="icon" v-on:click="decrement">r</span>
-      <input v-bind:value="value" type="number" min="-0.00001" v-on:input="change">
+      <span>{{value}}</span>
       <span class="icon" v-on:click="increment">a</span>
     </div>
     
