--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
     <div style="grid-area: 3 / 2 / 4 / 3;" class="qctrl" v-else>
       <span class="icon" v-on:click="decrement">r</span>
-      <span class="qty-display>{{value}}</span>
+      <span class="qty-display">{{value}}</span>
       <span class="icon" v-on:click="increment">a</span>
     </div>
     
