--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
     <div v-else id="placeorder">
       <span>Total: {{settings.currency}}{{carttotal}}</span>
       <h2>Place order</h2>
-      <input type="text" v-model:value="name" placeholder="(Your Name)"><br>
+      <input type="text" v-model="name" placeholder="(Your Name)"><br>
+      <textarea v-model="address" placeholder="(Your Address)"></textarea>
+      
       <button v-on:click="orderwa">Order Via WhatsApp</button><br>
     </div>
   </section>
