--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   <link rel="shortcut icon" type="image/png" href="/codefiles/assets/icon.png"/>
   <link rel="stylesheet" type="text/css" href="/codefiles/css/main.css"/>
   <script src="/codefiles/js/hnav.js"></script>
+  <!--
   <script src="/codefiles/js/papaparse.min.js"></script>
+  -->
+  <script src="/codefiles/js/tabletop.min.js"></script>
+  
   <script src="/codefiles/js/vue.min.js"></script>
   <script src="/codefiles/js/main.js"></script>
 </head>
